<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_radio_button"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="cn.teachcourse.view.RadioButtonActivity">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/nav_text_color_selec"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/nav_text_color_selec"
            android:layout_marginTop="20dp"
            android:text="@string/woman" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/radiogroup1"
        android:textColor="@color/nav_text_color_selec"
        android:layout_marginTop="30dp"
        android:text="@string/button" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nav_text_color_selec"
        android:layout_marginTop="20dp"
        android:text="@string/woman" />

    <include layout="@layout/activity_common_layout"
        style="@style/activity_common_style"/>
</RelativeLayout>
